--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/zbar_ros
-	previous = 
-	base = d0f9eff
+	previous = d0f9eff
+	base = ddec609
 	trim = 
 	trimbase = 
