--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/zbar_ros
-	previous = 
-	base = ece0416
+	previous = ece0416
+	base = 85a7fd3
 	trim = 
 	trimbase = 
