--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/zbar_ros
-	previous = 
-	base = 654a1f7
+	previous = 654a1f7
+	base = fcbcfe9
 	trim = 
 	trimbase = 
